namespaces/monitoring/kube-web-view.yaml
# adapted from https://github.com/hjacobs/kube-web-view/tree/master/deploy

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-web-view
  namespace: monitoring
  labels:
    application: kube-web-view
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-web-view
  template:
    metadata:
      labels:
        application: kube-web-view
    spec:
      serviceAccountName: kube-web-view
      containers:
      - name: kube-web-view
        # see https://codeberg.org/hjacobs/kube-web-view/releases
        image: hjacobs/kube-web-view:20.6.0
        args:
        - --port=8080
        - --show-container-logs
        # uncomment the following line to unhide secret data
        # see also https://kube-web-view.readthedocs.io/en/latest/security.html
        # - "--show-secrets"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 100Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-web-view
  namespace: monitoring
  labels:
    application: kube-web-view
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://auth--test-cluster.elifesciences.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth--test-cluster.elifesciences.org/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  rules:
    - host: dashboard--test-cluster.elifesciences.org
      http:
        paths:
          - path: /
            backend:
              serviceName: kube-web-view
              servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: kube-web-view
  namespace: monitoring
  labels:
    application: kube-web-view
spec:
  selector:
    application: kube-web-view
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
